--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-minversion = 3.8.0
-envlist = py38, py39, flake8, mypy
+minversion = 3.8.10
+envlist = py38, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
     3.8: py38, mypy, flake8
-    3.9: py39
 
 [testenv]
 setenv =
@@ -17,7 +16,7 @@ commands =
     pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
-basepython = python
+basepython = python3.8
 deps = flake8
 commands = flake8 src tests
 
