--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ classifiers =
 [options]
 packages =
     package_1
-    networking
+    multicast
 install_requires =
     
 python_requires = >=3.8
