--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,10 @@ classifiers =
 [options]
 packages =
     game
+    event
+    package_1
 install_requires =
+    pyzmq>=22.0.0
     
 python_requires = >=3.8
 package_dir =
